fix: overflow-x in contact mobile

--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -254,6 +254,7 @@
       justify-content: center;
       height: 90vh;
       overflow-y: scroll;
+      overflow-x: hidden;
     }
 
   }
